--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
   <style>
+    body {
+      width:80%;
+      margin:50px auto;
+    }
+    hr {
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, white, black, white);
+    }
     dt {
       float:left;
     }
@@ -23,32 +32,28 @@
   </style>
 </head>
 <body>
+  <a href="img/joku-iko.jpg"><img src="img/joku-iko_s.jpg" style="float:right;width:270px;margin:0px 0px 10px 10px"></a>
   <header><h1>Yuta Kusakabe / 日下部佑太</h1></header>
-  <div style="display:table">
-    <div style="display:table-cell;vertical-align:middle">
-      <a href="img/joku-iko.jpg"><img src="img/joku-iko_s.jpg" style="width:240px;margin-right:10px"></a>
-    </div>
-    <div style="display:table-cell;vertical-align:middle">
-      <main>
-        <p>Ph.D. Student</p>
-        <p>
-          <a href="http://www.math.sci.osaka-u.ac.jp/eng/index.html" target="_blank">Department of Mathematics, Graduate School of Science, Osaka University</a>,<br>
-          Toyonaka, Osaka 560-0043, Japan
-        </p>
-        <p><a href="#CV">Curriculum Vitae</a></p>
-        <p>
-          E-mail: y-kusakabe[at]cr.math.sci.osaka-u.ac.jp, kusaka<strong>p</strong>e[at]gmail.com</p>
-          Research interests: Several Complex Variables, Complex Analytic Geometry<br>
-          Keywords: Oka principle, Oka manifold, Stein space, ellipticity
-        </p>
-        <p>
-          Photo: Penguins' Jôku-Ikô <上空移行><br>
-          (<a href="http://www.nara-wu.ac.jp/aic/gdb/nwugdb/oka/fram/koron_eng.html" target="_blank">[Oka, 1936]</a>: Oka's Jôku-Ikô Principle)
-        </p>
-      </main>
-    </div>
-  </div>
-  <hr>
+  <main style="line-height">
+    <p>Ph.D. Student</p>
+    <p>
+      <a href="http://www.math.sci.osaka-u.ac.jp/eng/index.html" target="_blank">Department of Mathematics,
+      Graduate School of Science,
+      Osaka University</a>,
+      Toyonaka, Osaka 560-0043, Japan
+    </p>
+    <p><a href="#CV">Curriculum Vitae</a></p>
+    <p>
+      E-mail: y-kusakabe[at]cr.math.sci.osaka-u.ac.jp, kusaka<strong>p</strong>e[at]gmail.com</p>
+      Research interests: Several Complex Variables, Complex Analytic Geometry<br>
+      Keywords: Oka principle, Oka manifold, Stein space, ellipticity
+    </p>
+    <p>
+      Photo: Penguins' Jôku-Ikô <上空移行><br>
+      (<a href="http://www.nara-wu.ac.jp/aic/gdb/nwugdb/oka/fram/koron_eng.html" target="_blank">[Oka, 1936]</a>: Oka's Jôku-Ikô Principle)
+    </p>
+  </main>
+  <hr style="clear:right;">
   <h2>Papers</h2>
   <ol reversed>
     <li>
