--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>
-    Yuta Kusakabe
-  </title>
+  <title>Yuta Kusakabe</title>
   <script>
     MathJax = {
       tex: {
@@ -36,7 +34,7 @@
 <body>
   <a href="img/joku-iko.jpg"><img src="img/joku-iko_s.jpg" style="float:right;width:270px;margin:0px 0px 10px 10px"></a>
   <header><h1>Yuta Kusakabe / 日下部佑太</h1></header>
-  <main style="line-height">
+  <main>
     <p>Ph.D. Student</p>
     <p>
       <a href="http://www.math.sci.osaka-u.ac.jp/eng/index.html" target="_blank">Department of Mathematics,
@@ -84,7 +82,7 @@
     <li>
       Dense holomorphic curves in spaces of holomorphic maps and applications to universal maps.<br>
       <a href="https://doi.org/10.1142/S0129167X17500288" target="_blank">Internat. J. Math., 28(4):1750028, 15, 2017</a><br>
-      <a href="https://arxiv.org/abs/1702.08022" target="_blank">arXiv:1702.08022</a>.
+      <a href="https://arxiv.org/abs/1702.08022" target="_blank">arXiv:1702.08022</a>
     </li>
   </ol>
   <hr>
@@ -222,7 +220,7 @@
     <dt>March 2018</dt>
       <dd>Master of Science</dd>
       <dd>Graduate School of Science, Osaka University</dd>
-      <dd>Adivisor: Katsutoshi Yamanoi</dd>
+      <dd>Advisor: Katsutoshi Yamanoi</dd>
     <dt>March 2016</dt>
       <dd>Bachelor of Science</dd>
       <dd>School of Science, Nagoya University</dd>
