--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       margin-left:200px;
     }
   </style>
+  <meta name="google-site-verification" content="k6VtneW2UJiDRpWBJKTtH1G_aAvgiQw4t1DRMgDrKYY" />
 </head>
 <body>
   <a href="img/joku-iko.jpg"><img src="img/joku-iko_s.jpg" style="float:right;width:270px;margin:0px 0px 10px 10px"></a>
@@ -56,6 +57,10 @@
   <hr style="clear:right;">
   <h2>Papers</h2>
   <ol reversed>
+    <li>
+      Oka properties of complements of holomorphically convex sets.<br>
+      <a href="http://arxiv.org/abs/2005.08247" target="_blank">arXiv:2005.08247</a>
+    </li>
     <li>
       Thom's jet transversality theorem for regular maps.<br>
       <a href="https://arxiv.org/abs/2004.13539" target="_blank">arXiv:2004.13539</a>
@@ -105,6 +110,11 @@
   <hr>
   <h2>Talks</h2>
   <ol reversed>
+    <li>
+      Elliptic characterization of the Oka principle. (online)<br>
+      <a href="http://e-scv.fmf.uni-lj.si/index.php/activities/conferences-and-schools/214-virtual-conference" target="_blank">Virtual Conference on Complex Analysis and Complex Geometry</a>,
+      Western University's online system OWL, 4 May–14 June 2020
+    </li>
     <li>
       Oka complements of countable sets and non-elliptic Oka manifolds.<br>
       <a href="https://sites.google.com/site/scvwintersemi2019/" target="_blank">Winter Seminar on Several Complex Variables 2019</a>,
