--- a/index.html
+++ b/index.html
@@ -34,26 +34,24 @@
 </head>
 <body>
   <a href="img/joku-iko.jpg"><img src="img/joku-iko_s.jpg" style="float:right;width:270px;margin:0px 0px 10px 10px"></a>
-  <header><h1>Yuta Kusakabe / 日下部佑太</h1></header>
-  <main>
-    <p>Ph.D. Student</p>
-    <p>
-      <a href="http://www.math.sci.osaka-u.ac.jp/eng/index.html" target="_blank">Department of Mathematics,
-      Graduate School of Science,
-      Osaka University</a>,
-      Toyonaka, Osaka 560-0043, Japan
-    </p>
-    <p><a href="#CV">Curriculum Vitae</a></p>
-    <p>
-      E-mail: y-kusakabe[at]cr.math.sci.osaka-u.ac.jp, kusaka<strong>p</strong>e[at]gmail.com</p>
-      Research interests: Several Complex Variables, Complex Analytic Geometry<br>
-      Keywords: Oka principle, Oka manifold, Stein space, ellipticity
-    </p>
-    <p>
-      Photo: Penguins' Jôku-Ikô <上空移行><br>
-      (<a href="http://www.nara-wu.ac.jp/aic/gdb/nwugdb/oka/fram/koron_eng.html" target="_blank">[Oka, 1936]</a>: Oka's Jôku-Ikô Principle)
-    </p>
-  </main>
+  <h1>Yuta Kusakabe / 日下部佑太</h1>
+  <p>Ph.D. Student</p>
+  <p>
+    <a href="http://www.math.sci.osaka-u.ac.jp/eng/index.html" target="_blank">Department of Mathematics,
+    Graduate School of Science,
+    Osaka University</a>,
+    Toyonaka, Osaka 560-0043, Japan
+  </p>
+  <p><a href="#CV">Curriculum Vitae</a></p>
+  <p>
+    E-mail: y-kusakabe[at]cr.math.sci.osaka-u.ac.jp, kusaka<strong>p</strong>e[at]gmail.com</p>
+    Research interests: Several Complex Variables, Complex Analytic Geometry<br>
+    Keywords: Oka principle, Oka manifold, Stein space, ellipticity
+  </p>
+  <p>
+    Photo: Penguins' Jôku-Ikô <上空移行><br>
+    (<a href="http://www.nara-wu.ac.jp/aic/gdb/nwugdb/oka/fram/koron_eng.html" target="_blank">[Oka, 1936]</a>: Oka's Jôku-Ikô Principle)
+  </p>
   <hr style="clear:right;">
   <h2>Papers</h2>
   <ol reversed>
