--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
   <style>
     body {
-      width:80%;
-      margin:50px auto;
+      margin:5%;
     }
     hr {
     border: 0;
