--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     dt {
       float:left;
       clear:left;
-      width:200px;
+      width:13em;
     }
     dd {
-      margin-left:200px;
+      margin-left:13em;
     }
   </style>
   <meta name="google-site-verification" content="k6VtneW2UJiDRpWBJKTtH1G_aAvgiQw4t1DRMgDrKYY" />
