--- a/index.html
+++ b/index.html
@@ -107,6 +107,20 @@
   <hr>
   <h2>Talks</h2>
   <ol reversed>
+    <!--
+    <li>
+      Oka manifolds and ellipticity.<br>
+      Minisymposium ``Complex Analysis and Geometry" within the 8th European Congress of Mathematics,
+      Portorož, Slovenia, June 2021
+    </li>
+    -->
+    <!--
+    <li>
+      Oka properties of complements of holomorphically convex sets.<br>
+      <a href="" target="_blank">Seminar on Geometric Complex Analysis</a>,
+      The University of Tokyo, 29 June 2020
+    </li>
+    -->
     <li>
       Elliptic characterization of the Oka principle. (online)<br>
       <a href="http://e-scv.fmf.uni-lj.si/index.php/activities/conferences-and-schools/214-virtual-conference" target="_blank">Virtual Conference on Complex Analysis and Complex Geometry</a>,
