--- a/index.html
+++ b/index.html
@@ -110,14 +110,17 @@
     <!--
     <li>
       Oka manifolds and ellipticity.<br>
-      Minisymposium ``Complex Analysis and Geometry" within the 8th European Congress of Mathematics,
-      Portorož, Slovenia, June 2021
+      <a href="https://8ecm.si/" target="_blank">Minisymposium ``Complex Analysis and Geometry" within the 8th European Congress of Mathematics</a>,
+      Portorož, Slovenia, 20–26 June 2021
     </li>
-    -->
-    <!--
     <li>
-      Oka properties of complements of holomorphically convex sets.<br>
-      <a href="" target="_blank">Seminar on Geometric Complex Analysis</a>,
+      TBA.<br>
+      Complex Analysis, Geometry, and Dynamics,
+      University of Ljubljana, 14–18 June 2021
+    </li>
+    <li>
+      TBA. (online)<br>
+      <a href="https://www.ms.u-tokyo.ac.jp/seminar/2020/sem20-087.html" target="_blank">Seminar on Geometric Complex Analysis</a>,
       The University of Tokyo, 29 June 2020
     </li>
     -->
@@ -255,6 +258,11 @@
     <dt>April 2017–March 2018</dt>
       <dd>Research Assistant</dd>
       <dd>Graduate School of Science, Osaka University</dd>
+  </dl>
+  <h3>Membership</h3>
+  <dl>
+    <dt>April 2020–</dt>
+      <dd>The Mathematical Society of Japan</dd>
   </dl>
   <h3>Teaching</h3>
   Teaching Assistant at Graduate School of Science, Osaka University:
