--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
       Complex Analysis, Geometry, and Dynamics,
       University of Ljubljana, 14–18 June 2021
     </li>
+    -->
     <li>
-      TBA. (online)<br>
+      Oka properties of complements of holomorphically convex sets. (online)<br>
       <a href="https://www.ms.u-tokyo.ac.jp/seminar/2020/sem20-087.html" target="_blank">Seminar on Geometric Complex Analysis</a>,
       The University of Tokyo, 29 June 2020
     </li>
-    -->
     <li>
       Elliptic characterization of the Oka principle. (online)<br>
       <a href="http://e-scv.fmf.uni-lj.si/index.php/activities/conferences-and-schools/214-virtual-conference" target="_blank">Virtual Conference on Complex Analysis and Complex Geometry</a>,
