--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </li>
     <li>
       Oka complements of countable sets and nonelliptic Oka manifolds.<br>
-      <a href="https://doi.org/10.1090/proc/14832" target="_blank"><a href="https://arxiv.org/abs/1907.12024" target="_blank">Proc. Amer. Math. Soc., 148(3):1233–1238, 2020</a><br>
+      <a href="https://doi.org/10.1090/proc/14832" target="_blank">Proc. Amer. Math. Soc., 148(3):1233–1238, 2020</a><br>
       <a href="https://arxiv.org/abs/1907.12024" target="_blank">arXiv:1907.12024</a>
     </li>
     <li>
