--- a/index.html
+++ b/index.html
@@ -59,12 +59,13 @@
       <a href="http://arxiv.org/abs/2005.08247" target="_blank">arXiv:2005.08247</a>
     </li>
     <li>
-      Thom's jet transversality theorem for regular maps.<br>
-      <a href="https://arxiv.org/abs/2004.13539" target="_blank">arXiv:2004.13539</a>
-    </li>
-    <li>
       Elliptic characterization and unification of Oka maps.<br>
       <a href="https://arxiv.org/abs/2003.03757" target="_blank">arXiv:2003.03757</a>
+    </li>
+    <li>
+      Thom's jet transversality theorem for regular maps.<br>
+      J. Geom. Anal., to appear<br>
+      <a href="https://arxiv.org/abs/2004.13539" target="_blank">arXiv:2004.13539</a>
     </li>
     <li>
       An implicit function theorem for sprays and applications to Oka theory.<br>
