--- a/index.html
+++ b/index.html
@@ -265,6 +265,12 @@
     <dt>April 2020–</dt>
       <dd>The Mathematical Society of Japan</dd>
   </dl>
+  <h3>Awards</h3>
+  <dl>
+    <dt>September 2020</dt>
+      <dd>MSJ Takebe Katahiro Prize for Encouragement of Young Researchers</dd>
+      <dd>The Mathematical Society of Japan</dd>
+  </dl>
   <h3>Teaching</h3>
   Teaching Assistant at Graduate School of Science, Osaka University:
   <dl>
