--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Yuta Kusakabe</title>
+  <title>Yuta Kusakabe / 日下部佑太</title>
   <script>
     MathJax = {
       tex: {
