--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
       <a href="https://arxiv.org/abs/2004.13539" target="_blank">arXiv:2004.13539</a>
     </li>
     <li>
-      An implicit function theorem for sprays and applications to Oka theory.<br>
-      Internat. J. Math., to appear<br>
-      <a href="https://arxiv.org/abs/2004.12397" target="_blank">arXiv:2004.12397</a>
-    </li>
-    <li>
       Elliptic characterization and localization of Oka manifolds.<br>
       Indiana Univ. Math. J., to appear<br>
       <a href="https://arxiv.org/abs/1808.06290" target="_blank">arXiv:1808.06290</a>
+    </li>
+    <li>
+      An implicit function theorem for sprays and applications to Oka theory.<br>
+      <a href="https://doi.org/10.1142/S0129167X20500718" target="_blank">Internat. J. Math., 31(9):2050071, 9, 2020</a><br>
+      <a href="https://arxiv.org/abs/2004.12397" target="_blank">arXiv:2004.12397</a>
     </li>
     <li>
       Oka complements of countable sets and nonelliptic Oka manifolds.<br>
