Update Talks and CV

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Yuta Kusakabe / 日下部佑太</title>
+  <title>Yuta Kusakabe</title>
   <script>
     MathJax = {
       tex: {
@@ -34,7 +34,7 @@
 <body>
   <a href="img/joku-iko.jpg"><img src="img/joku-iko_s.jpg" style="float:right;width:270px;margin:0px 0px 10px 10px"></a>
   <h1>Yuta Kusakabe / 日下部佑太</h1>
-  <p>Ph.D. Student</p>
+  <p>Postdoctoral Fellow</p>
   <p>
     <a href="http://www.math.sci.osaka-u.ac.jp/eng/index.html" target="_blank">Department of Mathematics,
     Graduate School of Science,
@@ -120,6 +120,11 @@
       University of Ljubljana, 14–18 June 2021
     </li>
     -->
+    <li>
+      多項式凸集合の補空間の岡性. (online)<br>
+      <a href="https://www.mathsoc.jp/activity/meeting/kumamoto20sept/" target="_blank">MSJ Autumn Meeting 2020</a>,
+      Kumamoto University, 22–25 September 2020
+    </li>
     <li>
       Oka properties of complements of holomorphically convex sets. (online)<br>
       <a href="https://www.ms.u-tokyo.ac.jp/seminar/2020/sem20-087.html" target="_blank">Seminar on Geometric Complex Analysis</a>,
@@ -242,6 +247,10 @@
   Born on May 22, 1993 in Aichi, Japan.
   <h3>Education</h3>
   <dl>
+    <dt>September 2020</dt>
+      <dd>Doctor of Philosophy (Science)</dd>
+      <dd>Graduate School of Science, Osaka University</dd>
+      <dd>Advisor: Katsutoshi Yamanoi</dd>
     <dt>March 2018</dt>
       <dd>Master of Science</dd>
       <dd>Graduate School of Science, Osaka University</dd>
@@ -253,7 +262,10 @@
   </dl>
   <h3>Employment / Fellowships</h3>
   <dl>
-    <dt>April 2018–</dt>
+    <dt>October 2020–</dt>
+      <dd>JSPS Research Fellow (PD)</dd>
+      <dd>Japan Society for the Promotion of Science</dd>
+    <dt>April 2018–September 2020</dt>
       <dd>JSPS Research Fellow (DC1)</dd>
       <dd>Japan Society for the Promotion of Science</dd>
     <dt>April 2017–March 2018</dt>
@@ -274,7 +286,7 @@
   <h3>Teaching</h3>
   Teaching Assistant at Graduate School of Science, Osaka University:
   <dl>
-    <dt>April 2020–</dt>
+    <dt>April 2020–September 2020</dt>
       <dd>Advanced Complex Analysis (Exercise Session)</dd>
       <dd>Lecturer: Shinpei Baba</dd>
     <dt>October 2019–March 2020</dt>
