--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
 <body>
   <a href="img/joku-iko.jpg"><img src="img/joku-iko_s.jpg" style="float:right;width:270px;margin:0px 0px 10px 10px"></a>
   <h1>Yuta Kusakabe / 日下部佑太</h1>
-  <p>Postdoctoral Fellow</p>
+  <p>Assistant Professor</p>
   <p>
-    <a href="http://www.math.sci.osaka-u.ac.jp/eng/index.html" target="_blank">Department of Mathematics,
+    <a href="https://www.math.kyoto-u.ac.jp/en" target="_blank">Department of Mathematics,
     Graduate School of Science,
-    Osaka University</a>,
-    Toyonaka, Osaka 560-0043, Japan
+    Kyoto University</a>,
+    Kyoto 606-8502, Japan
   </p>
   <p><a href="#CV">Curriculum Vitae</a></p>
   <p>
-    E-mail: y-kusakabe[at]cr.math.sci.osaka-u.ac.jp, kusaka<strong>p</strong>e[at]gmail.com</p>
+    E-mail: kusakabe[at]math.kyoto-u.ac.jp, kusaka<strong>p</strong>e[at]gmail.com</p>
     Research interests: Several Complex Variables, Complex Analytic Geometry<br>
     Keywords: Oka principle, Oka manifold, Stein space, ellipticity
   </p>
@@ -60,6 +60,7 @@
     </li>
     <li>
       Elliptic characterization and unification of Oka maps.<br>
+      Math. Z., to appear<br>
       <a href="https://arxiv.org/abs/2003.03757" target="_blank">arXiv:2003.03757</a>
     </li>
     <li>
@@ -120,6 +121,11 @@
       University of Ljubljana, 14–18 June 2021
     </li>
     -->
+    <li>
+      多項式凸集合の補空間の岡性.<br>
+      <a href="http://www4.math.sci.osaka-u.ac.jp/sembbs2/rirekiY2020.cgi" target="_blank">Geometry Seminar</a>,
+      Osaka University, 9 November 2020
+    </li>
     <li>
       多項式凸集合の補空間の岡性. (online)<br>
       <a href="https://www.mathsoc.jp/activity/meeting/kumamoto20sept/" target="_blank">MSJ Autumn Meeting 2020</a>,
@@ -262,7 +268,10 @@
   </dl>
   <h3>Employment / Fellowships</h3>
   <dl>
-    <dt>October 2020–</dt>
+    <dt>December 2020–</dt>
+      <dd>Assistant Professor</dd>
+      <dd>Department of Mathematics, Graduate School of Science, Kyoto University</dd>
+    <dt>October 2020–November 2020</dt>
       <dd>JSPS Research Fellow (PD)</dd>
       <dd>Japan Society for the Promotion of Science</dd>
     <dt>April 2018–September 2020</dt>
