--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
       <a href="http://arxiv.org/abs/2005.08247" target="_blank">arXiv:2005.08247</a>
     </li>
     <li>
-      Elliptic characterization and unification of Oka maps.<br>
-      Math. Z., to appear<br>
-      <a href="https://arxiv.org/abs/2003.03757" target="_blank">arXiv:2003.03757</a>
-    </li>
-    <li>
       Thom's jet transversality theorem for regular maps.<br>
       J. Geom. Anal., to appear<br>
       <a href="https://arxiv.org/abs/2004.13539" target="_blank">arXiv:2004.13539</a>
+    </li>
+    <li>
+      Elliptic characterization and unification of Oka maps.<br>
+      Math. Z., to appear<br>
+      <a href="https://arxiv.org/abs/2003.03757" target="_blank">arXiv:2003.03757</a>
     </li>
     <li>
       Elliptic characterization and localization of Oka manifolds.<br>
@@ -109,18 +109,11 @@
   <hr>
   <h2>Talks</h2>
   <ol reversed>
-    <!--
     <li>
-      Oka manifolds and ellipticity.<br>
-      <a href="https://8ecm.si/" target="_blank">Minisymposium ``Complex Analysis and Geometry" within the 8th European Congress of Mathematics</a>,
-      Portorož, Slovenia, 20–26 June 2021
+      岡多様体と楕円性. (online)<br>
+      <a href="https://tkoike.com/conf_2020/wakateonline.html" target="_blank">Young Mathematicians Online Workshop on Several Complex Variables</a>,
+      Osaka City University, 25 November–16 December 2020
     </li>
-    <li>
-      TBA.<br>
-      Complex Analysis, Geometry, and Dynamics,
-      University of Ljubljana, 14–18 June 2021
-    </li>
-    -->
     <li>
       多項式凸集合の補空間の岡性.<br>
       <a href="http://www4.math.sci.osaka-u.ac.jp/sembbs2/rirekiY2020.cgi" target="_blank">Geometry Seminar</a>,
