--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
   <h2>Talks</h2>
   <ol reversed>
     <li>
+      The Oka principle and the dual Levi problem. (online)<br>
+      <a href="https://tkoike.com/conf_2020/2021FebGrauert.html" target="_blank">Grauert theory and recent complex geometry</a>,
+      Osaka City University, 6–9 February 2021
+    </li>
+    <li>
       岡多様体と楕円性. (online)<br>
       <a href="https://tkoike.com/conf_2020/wakateonline.html" target="_blank">Young Mathematicians Online Workshop on Several Complex Variables</a>,
       Osaka City University, 25 November–16 December 2020
