--- a/index.html
+++ b/index.html
@@ -93,9 +93,12 @@
   <h2>Notes</h2>
   <ol reversed>
     <li>
+      <a href="pdf/MSJ2021_ellipticity.pdf" target="_blank">岡多様体と楕円性</a>. (Japanese)<br>
+      日本数学会2021年度年会講演アブストラクト, 2021
+    </li>
+    <li>
       <a href="pdf/kokyuroku_flexibility.pdf" target="_blank">Characterizations of Oka manifolds by holomorphic flexibilities</a>. (Japanese)<br>
-      <a href="https://wwp.shizuoka.ac.jp/masanori-adachi/2017rims/" target="_blank">Topology of pseudoconvex domains and analysis of reproducing kernels</a>,
-      RIMS Kôkyûroku, to appear
+      <a href="http://www.kurims.kyoto-u.ac.jp/~kyodo/kokyuroku/contents/2175.html" target="_blank">RIMS Kôkyûroku, 2175:101–107, 2021</a>
     </li>
     <li>
       <a href="pdf/kansuron_ellipticity.pdf" target="_blank">岡の原理と楕円性</a>. (Japanese)<br>
@@ -109,6 +112,11 @@
   <hr>
   <h2>Talks</h2>
   <ol reversed>
+    <li>
+      岡多様体と楕円性. (online)<br>
+      <a href="https://www.mathsoc.jp/activity/meeting/keio21mar/" target="_blank">MSJ Spring Meeting 2021</a>,
+      Keio University, 15–18 March 2021
+    </li>
     <li>
       The Oka principle and the dual Levi problem. (online)<br>
       <a href="https://tkoike.com/conf_2020/2021FebGrauert.html" target="_blank">Grauert theory and recent complex geometry</a>,
