--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
       <a href="http://arxiv.org/abs/2005.08247" target="_blank">arXiv:2005.08247</a>
     </li>
     <li>
-      Thom's jet transversality theorem for regular maps.<br>
-      J. Geom. Anal., to appear<br>
-      <a href="https://arxiv.org/abs/2004.13539" target="_blank">arXiv:2004.13539</a>
+      Elliptic characterization and localization of Oka manifolds.<br>
+      <a href="https://doi.org/10.1512/iumj.2021.70.8454" target="_blank">Indiana Univ. Math. J., 70(3):1039–1054, 2021</a><br>
+      <a href="https://arxiv.org/abs/1808.06290" target="_blank">arXiv:1808.06290</a>
     </li>
     <li>
       Elliptic characterization and unification of Oka maps.<br>
-      Math. Z., to appear<br>
+      <a href="https://doi.org/10.1007/s00209-020-02661-y" target="_blank">Math. Z., 298(3–4):1735–1750, 2021</a><br>
       <a href="https://arxiv.org/abs/2003.03757" target="_blank">arXiv:2003.03757</a>
     </li>
     <li>
-      Elliptic characterization and localization of Oka manifolds.<br>
-      Indiana Univ. Math. J., to appear<br>
-      <a href="https://arxiv.org/abs/1808.06290" target="_blank">arXiv:1808.06290</a>
+      Thom's jet transversality theorem for regular maps.<br>
+      <a href="https://doi.org/10.1007/s12220-020-00515-x" target="_blank">J. Geom. Anal., 31(6):6031–6041, 2021</a><br>
+      <a href="https://arxiv.org/abs/2004.13539" target="_blank">arXiv:2004.13539</a>
     </li>
     <li>
       An implicit function theorem for sprays and applications to Oka theory.<br>
@@ -112,6 +112,20 @@
   <hr>
   <h2>Talks</h2>
   <ol reversed>
+    <li>
+      Oka manifolds and the dual Levi problem. (online)<br>
+      <a href="https://sites.google.com/site/scvhayama/2021" target="_blank">HAYAMA Symposium on Complex Analysis in Several Variables XXII</a>, 22–25 July 2021
+    </li>
+    <li>
+      複素解析学における剛性と柔軟性. (online)<br>
+      <a href="https://www.math.kyoto-u.ac.jp/ja/node/4632" target="_blank">Galois Festival 2021</a>,
+      Kyoto University, 15 June 2021
+    </li>
+    <li>
+      Oka manifolds and the dual Levi problem. (online)<br>
+      <a href="https://www.math.kyoto-u.ac.jp/ja/event/seminar/4627" target="_blank">Differential Topology Seminar</a>,
+      Kyoto University, 25 May 2021
+    </li>
     <li>
       岡多様体と楕円性. (online)<br>
       <a href="https://www.mathsoc.jp/activity/meeting/keio21mar/" target="_blank">MSJ Spring Meeting 2021</a>,
@@ -299,6 +313,15 @@
       <dd>The Mathematical Society of Japan</dd>
   </dl>
   <h3>Teaching</h3>
+  Lectures at Kyoto University:
+  <dl>
+    <dt>April 2021–September 2021</dt>
+      <dd>Calculus with Exercises A</dd>
+      <dd>Liberal Arts and General Education Courses</dd>
+    <dt>April 2021–September 2021</dt>
+      <dd>Exercises in Analysis I</dd>
+      <dd>Faculty of Science</dd>
+  </dl>
   Teaching Assistant at Graduate School of Science, Osaka University:
   <dl>
     <dt>April 2020–September 2020</dt>
