--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
   <h2>Talks</h2>
   <ol reversed>
     <li>
+      Oka theory for algebraic manifolds. (online)<br>
+      <a href="https://sites.google.com/view/wasedag2021" target="_blank">Miyako-no-Seihoku Algebraic Geometry Symposium 2021</a>, 17–20 August 2021
+    </li>
+    <li>
       Oka manifolds and the dual Levi problem. (online)<br>
       <a href="https://sites.google.com/site/scvhayama/2021" target="_blank">HAYAMA Symposium on Complex Analysis in Several Variables XXII</a>, 22–25 July 2021
     </li>
