--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   <ol reversed>
     <li>
       Oka theory for algebraic manifolds. (online)<br>
-      <a href="https://sites.google.com/view/wasedag2021" target="_blank">Miyako-no-Seihoku Algebraic Geometry Symposium 2021</a>, 17–20 August 2021
+      <a href="https://sites.google.com/view/wasedag2021" target="_blank">Miyako-no-Seihoku Algebraic Geometry Symposium 2021</a>, Waseda University, 17–20 August 2021
     </li>
     <li>
       Oka manifolds and the dual Levi problem. (online)<br>
