--- a/index.html
+++ b/index.html
@@ -55,18 +55,12 @@
   <h2>Papers</h2>
   <ol reversed>
     <li>
+      Surjective morphisms onto subelliptic varieties.<br>
+      <a href="https://arxiv.org/abs/2212.06412" target="_blank">arXiv:2212.06412</a>
+    </li>
+    <li>
       Oka properties of complements of holomorphically convex sets.<br>
       <a href="http://arxiv.org/abs/2005.08247" target="_blank">arXiv:2005.08247</a>
-    </li>
-    <li>
-      Elliptic characterization and localization of Oka manifolds.<br>
-      <a href="https://doi.org/10.1512/iumj.2021.70.8454" target="_blank">Indiana Univ. Math. J., 70(3):1039–1054, 2021</a><br>
-      <a href="https://arxiv.org/abs/1808.06290" target="_blank">arXiv:1808.06290</a>
-    </li>
-    <li>
-      Elliptic characterization and unification of Oka maps.<br>
-      <a href="https://doi.org/10.1007/s00209-020-02661-y" target="_blank">Math. Z., 298(3–4):1735–1750, 2021</a><br>
-      <a href="https://arxiv.org/abs/2003.03757" target="_blank">arXiv:2003.03757</a>
     </li>
     <li>
       Thom's jet transversality theorem for regular maps.<br>
@@ -79,9 +73,19 @@
       <a href="https://arxiv.org/abs/2004.12397" target="_blank">arXiv:2004.12397</a>
     </li>
     <li>
+      Elliptic characterization and unification of Oka maps.<br>
+      <a href="https://doi.org/10.1007/s00209-020-02661-y" target="_blank">Math. Z., 298(3–4):1735–1750, 2021</a><br>
+      <a href="https://arxiv.org/abs/2003.03757" target="_blank">arXiv:2003.03757</a>
+    </li>
+    <li>
       Oka complements of countable sets and nonelliptic Oka manifolds.<br>
       <a href="https://doi.org/10.1090/proc/14832" target="_blank">Proc. Amer. Math. Soc., 148(3):1233–1238, 2020</a><br>
       <a href="https://arxiv.org/abs/1907.12024" target="_blank">arXiv:1907.12024</a>
+    </li>
+    <li>
+      Elliptic characterization and localization of Oka manifolds.<br>
+      <a href="https://doi.org/10.1512/iumj.2021.70.8454" target="_blank">Indiana Univ. Math. J., 70(3):1039–1054, 2021</a><br>
+      <a href="https://arxiv.org/abs/1808.06290" target="_blank">arXiv:1808.06290</a>
     </li>
     <li>
       Dense holomorphic curves in spaces of holomorphic maps and applications to universal maps.<br>
@@ -112,6 +116,31 @@
   <hr>
   <h2>Talks</h2>
   <ol reversed>
+    <li>
+      Oka theory for algebraic manifolds. (online)<br>
+      <a href="http://www4.math.sci.osaka-u.ac.jp/sembbs2/rirekiThisY.cgi" target="_blank">Algebraic Geometry Seminar</a>, Osaka University, 6 June 2022
+    </li>
+    <li>
+      岡多様体と双対Levi問題.<br>
+      <a href="https://www.math.kyoto-u.ac.jp/ja/event/seminar/4849" target="_blank">Colloquium</a>, Kyoto University, 27 April 2022
+    </li>
+    <li>
+      岡多様体と楕円性. (online)<br>
+      <a href="https://www.sci.kagoshima-u.ac.jp/mcs/programs/17AAG.pdf" target="_blank">The 17th Kagoshima Algebra-Analysis-Geometry Seminar</a>, 16–18 February 2022
+    </li>
+    <li>
+      Oka manifolds and ellipticity. (online)<br>
+      <a href="https://www.math.kyoto-u.ac.jp/~hkenta/KTGU/7thWorkshop/index.html" target="_blank">The 7th KTGU Mathematics Workshop for Young Researchers</a>, Kyoto University, 14–15 February 2022
+    </li>
+    <li>
+      Elliptic characterization and unification of Oka maps. (online)<br>
+      <a href="http://www.math.aoyama.ac.jp/~ymatsuda/wgf2021/index.html" target="_blank">Workshop on geometry of foliations and its applications</a>, 10–12 December 2021
+    </li>
+    <li>
+      Oka theory for algebraic manifolds. (online)<br>
+      <a href="https://www.math.kyoto-u.ac.jp/ja/event/seminar/4779" target="_blank">Algebraic Geometry Seminar</a>, Kyoto University, 30 November 2021
+    </li>
+
     <li>
       Oka theory for algebraic manifolds. (online)<br>
       <a href="https://sites.google.com/view/wasedag2021" target="_blank">Miyako-no-Seihoku Algebraic Geometry Symposium 2021</a>, Waseda University, 17–20 August 2021
@@ -319,12 +348,30 @@
   <h3>Teaching</h3>
   Lectures at Kyoto University:
   <dl>
-    <dt>April 2021–September 2021</dt>
-      <dd>Calculus with Exercises A</dd>
+    <dt>April 2022–September 2022</dt>
+      <dd>Function Theory of a Complex Variable</dd>
+      <dd>Faculty of Science</dd>
+    <dt>April 2022–September 2022</dt>
+      <dd>Exercises in Analysis I</dd>
+      <dd>Faculty of Science</dd>
+    <dt>April 2022–September 2022</dt>
+      <dd>Calculus with Exercises A (T1)</dd>
+      <dd>Liberal Arts and General Education Courses</dd>
+    <dt>April 2022–September 2022</dt>
+      <dd>Calculus with Exercises A (T3)</dd>
+      <dd>Liberal Arts and General Education Courses</dd>
+    <dt>October 2021–March 2022</dt>
+      <dd>Calculus with Exercises B (A1/A2)</dd>
       <dd>Liberal Arts and General Education Courses</dd>
     <dt>April 2021–September 2021</dt>
       <dd>Exercises in Analysis I</dd>
       <dd>Faculty of Science</dd>
+    <dt>April 2021–September 2021</dt>
+      <dd>Calculus with Exercises A (T1)</dd>
+      <dd>Liberal Arts and General Education Courses</dd>
+    <dt>April 2021–September 2021</dt>
+      <dd>Calculus with Exercises A (T3)</dd>
+      <dd>Liberal Arts and General Education Courses</dd>
   </dl>
   Teaching Assistant at Graduate School of Science, Osaka University:
   <dl>
