--- a/index.html
+++ b/index.html
@@ -138,9 +138,8 @@
     </li>
     <li>
       Oka theory for algebraic manifolds. (online)<br>
-      <a href="https://www.math.kyoto-u.ac.jp/ja/event/seminar/4779" target="_blank">Algebraic Geometry Seminar</a>, Kyoto University, 30 November 2021
+      <a href="https://www.math.kyoto-u.ac.jp/ja/event/seminar/4779" target="_blank">Tokyo-Kyoto Algebraic Geometry Seminar</a>, 30 November 2021
     </li>
-
     <li>
       Oka theory for algebraic manifolds. (online)<br>
       <a href="https://sites.google.com/view/wasedag2021" target="_blank">Miyako-no-Seihoku Algebraic Geometry Symposium 2021</a>, Waseda University, 17–20 August 2021
@@ -333,6 +332,15 @@
     <dt>April 2017–March 2018</dt>
       <dd>Research Assistant</dd>
       <dd>Graduate School of Science, Osaka University</dd>
+  </dl>
+  <h3>Grants</h3>
+  <dl>
+    <dt>August 2021–</dt>
+      <dd>Grant-in-Aid for Research Activity Start-up (Grant Number: <a href="https://kaken.nii.ac.jp/en/grant/KAKENHI-PROJECT-21K20324/" target="_blank">21K20324</a>)</dd>
+      <dd>Japan Society for the Promotion of Science</dd>
+    <dt>April 2018–March 2021</dt>
+      <dd>Grant-in-Aid for JSPS Fellows (Grant Number: <a href="https://kaken.nii.ac.jp/en/grant/KAKENHI-PROJECT-18J20418/" target="_blank">18J20418</a>)</dd>
+      <dd>Japan Society for the Promotion of Science</dd>
   </dl>
   <h3>Membership</h3>
   <dl>
