Add Papers and Organization

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
   <meta name="google-site-verification" content="k6VtneW2UJiDRpWBJKTtH1G_aAvgiQw4t1DRMgDrKYY" />
 </head>
 <body>
+  <script>
+    document.write('<div style="text-align:right">Last updated: ' + document.lastModified+'</div>');
+  </script>
+  <hr>
   <a href="img/joku-iko.jpg"><img src="img/joku-iko_s.jpg" style="float:right;width:270px;margin:0px 0px 10px 10px"></a>
   <h1>Yuta Kusakabe / 日下部佑太</h1>
   <p>Assistant Professor</p>
@@ -54,6 +58,10 @@
   <hr style="clear:right;">
   <h2>Papers</h2>
   <ol reversed>
+    <li>
+      On the fundamental groups of subelliptic varieties.<br>
+      <a href="https://arxiv.org/abs/2212.07085" target="_blank">arXiv:2212.07085</a>
+    </li>
     <li>
       Surjective morphisms onto subelliptic varieties.<br>
       <a href="https://arxiv.org/abs/2212.06412" target="_blank">arXiv:2212.06412</a>
@@ -333,6 +341,11 @@
       <dd>Research Assistant</dd>
       <dd>Graduate School of Science, Osaka University</dd>
   </dl>
+  <h3>Membership</h3>
+  <dl>
+    <dt>April 2020–</dt>
+      <dd>The Mathematical Society of Japan</dd>
+  </dl>
   <h3>Grants</h3>
   <dl>
     <dt>August 2021–</dt>
@@ -342,16 +355,18 @@
       <dd>Grant-in-Aid for JSPS Fellows (Grant Number: <a href="https://kaken.nii.ac.jp/en/grant/KAKENHI-PROJECT-18J20418/" target="_blank">18J20418</a>)</dd>
       <dd>Japan Society for the Promotion of Science</dd>
   </dl>
-  <h3>Membership</h3>
-  <dl>
-    <dt>April 2020–</dt>
-      <dd>The Mathematical Society of Japan</dd>
-  </dl>
   <h3>Awards</h3>
   <dl>
     <dt>September 2020</dt>
       <dd>MSJ Takebe Katahiro Prize for Encouragement of Young Researchers</dd>
       <dd>The Mathematical Society of Japan</dd>
+  </dl>
+  <h3>Organization</h3>
+  <dl>
+    <dt>October 2021–</dt>
+    <dd><a href="https://www.math.kyoto-u.ac.jp/ja/event/seminar/algebraic-geometry" target="_blank">Algebraic Geometry Seminar</a></dd>
+    <dd>Kyoto University</dd>
+    <dd>with Yuji Odaka, Yuki Hirano and Kenta Hashizume</dd>
   </dl>
   <h3>Teaching</h3>
   Lectures at Kyoto University:
@@ -414,9 +429,5 @@
       <dd>Calculus A (Problem Session)</dd>
       <dd>Lecturer: Naotake Takao</dd>
   </dl>
-  <hr>
-  <script>
-    document.write('<div style="text-align:right">Last updated: ' + document.lastModified+'</div>');
-  </script>
 </body>
 </html>
