--- a/index.html
+++ b/index.html
@@ -429,5 +429,6 @@
       <dd>Calculus A (Problem Session)</dd>
       <dd>Lecturer: Naotake Takao</dd>
   </dl>
+  <div style="text-align:right">$\square$</div>
 </body>
 </html>
