--- a/index.html
+++ b/index.html
@@ -128,6 +128,22 @@
   <h2>Talks</h2>
   <ol reversed>
     <li>
+      Surjective morphisms onto Gromov elliptic varieties.<br>
+      <a href="https://www.mn.uio.no/math/english/research/projects/granddrm/events/conferences/oka-theory-and-complex-geometry-2023/" target="_blank">Oka Theory and Complex Geometry Conference, Summer 2023</a>, Sophus Lie Conference Center, Nordfjordeid, 19–23 June 2023
+    </li>
+    <li>
+      Gromov ellipticity in complex analytic geometry and algebraic geometry.<br>
+      <a href="https://conferences.matheo.si/event/40/" target="_blank">Complex Analysis, Geometry, and Dynamics - Portorož 2023</a>, Hotel Histrion, Portorož, 5–9 June 2023
+    </li>
+    <li>
+      Surjective morphisms onto subelliptic varieties.<br>
+      <a href="https://sites.google.com/site/hisashikasuyamath/workshop-on-complex-geometry-in-osaka-2023" target="_blank">Workshop on Complex Geometry in Osaka 2023</a>, Osaka University, 22–24 March 2023
+    </li>
+    <li>
+      複素解析幾何と代数幾何における楕円性について.<br>
+      <a href="https://tkoike.com/complex_analysis_seminar/" target="_blank">OCAMI Complex Analysis Seminar</a>, Osaka Metropolitan University, 21 February 2023
+    </li>
+    <li>
       Oka theory for algebraic manifolds. (online)<br>
       <a href="http://www4.math.sci.osaka-u.ac.jp/sembbs2/rirekiThisY.cgi" target="_blank">Algebraic Geometry Seminar</a>, Osaka University, 6 June 2022
     </li>
@@ -369,7 +385,7 @@
     <dt>October 2021–</dt>
     <dd><a href="https://www.math.kyoto-u.ac.jp/ja/event/seminar/algebraic-geometry" target="_blank">Algebraic Geometry Seminar</a></dd>
     <dd>Kyoto University</dd>
-    <dd>with Yuji Odaka, Yuki Hirano and Kenta Hashizume</dd>
+    <dd>with Yuji Odaka, Tatsuro Kawakami and Teppei Takamatsu</dd>
   </dl>
   <h3>Teaching</h3>
   Lectures at Kyoto University:
