--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
   </dl>
   <h3>Grants</h3>
   <dl>
-    <dt>August 2021–</dt>
+    <dt>August 2021–March 2024</dt>
       <dd>Grant-in-Aid for Research Activity Start-up (Grant Number: <a href="https://kaken.nii.ac.jp/en/grant/KAKENHI-PROJECT-21K20324/" target="_blank">21K20324</a>)</dd>
       <dd>Japan Society for the Promotion of Science</dd>
     <dt>April 2018–March 2021</dt>
@@ -390,6 +390,18 @@
   <h3>Teaching</h3>
   Lectures at Kyoto University:
   <dl>
+    <dt>April 2023–September 2023</dt>
+      <dd>Function Theory of a Complex Variable</dd>
+      <dd>Faculty of Science</dd>
+    <dt>April 2023–September 2023</dt>
+      <dd>Exercises in Analysis I</dd>
+      <dd>Faculty of Science</dd>
+    <dt>April 2023–September 2023</dt>
+      <dd>Calculus with Exercises A (T18)</dd>
+      <dd>Liberal Arts and General Education Courses</dd>
+    <dt>April 2023–September 2023</dt>
+      <dd>Calculus with Exercises A (T21)</dd>
+      <dd>Liberal Arts and General Education Courses</dd>
     <dt>April 2022–September 2022</dt>
       <dd>Function Theory of a Complex Variable</dd>
       <dd>Faculty of Science</dd>
