Update Papers and Talks

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     </li>
     <li>
       Oka properties of complements of holomorphically convex sets.<br>
+      Ann. of Math. (2), to appear<br>
       <a href="http://arxiv.org/abs/2005.08247" target="_blank">arXiv:2005.08247</a>
     </li>
     <li>
@@ -127,6 +128,10 @@
   <hr>
   <h2>Talks</h2>
   <ol reversed>
+    <li>
+      Gromov ellipticity in complex analytic geometry and algebraic geometry.<br>
+      <a href="https://sites.google.com/view/ymwscv2023/" target="_blank">Young Mathematicians Workshop on Several Complex Variables 2023</a>, Pusan National University, 9–12 August 2023
+    </li>
     <li>
       Surjective morphisms onto Gromov elliptic varieties.<br>
       <a href="https://www.mn.uio.no/math/english/research/projects/granddrm/events/conferences/oka-theory-and-complex-geometry-2023/" target="_blank">Oka Theory and Complex Geometry Conference, Summer 2023</a>, Sophus Lie Conference Center, Nordfjordeid, 19–23 June 2023
