--- a/index.html
+++ b/index.html
@@ -129,6 +129,22 @@
   <h2>Talks</h2>
   <ol reversed>
     <li>
+      TBA.<br>
+      <a href="https://tkoike.com/conf_2023/2024Jan.html" target="_blank">Workshop on Dynamics in Arithmetic and Complex Geometry and its Applications</a>, Osaka Metropolitan University, 16–19 January 2024
+    </li>
+    <li>
+      TBA.<br>
+      <a href="https://sites.google.com/view/2023scvwinter/" target="_blank">Winter Seminar on Several Complex Variables 2023</a>, University of Tsukuba, 15–17 December 2023
+    </li>
+    <li>
+      TBA.<br>
+      <a href="https://tkoike.com/conf_2023/2023Nov.html" target="_blank">Problems on Foliations and Dynamics in Complex Geometry</a>, RIMS, Kyoto University, 20–22 November 2023
+    </li>
+    <li>
+      TBA.<br>
+      <a href="https://www.fmf.uni-lj.si/en/research/complex-analysis-seminar/" target="_blank">Complex Analysis Seminar</a>, University of Ljubljana, 10 October 2023
+    </li>
+    <li>
       Gromov ellipticity in complex analytic geometry and algebraic geometry.<br>
       <a href="https://sites.google.com/view/ymwscv2023/" target="_blank">Young Mathematicians Workshop on Several Complex Variables 2023</a>, Pusan National University, 9–12 August 2023
     </li>
@@ -166,7 +182,7 @@
     </li>
     <li>
       Elliptic characterization and unification of Oka maps. (online)<br>
-      <a href="http://www.math.aoyama.ac.jp/~ymatsuda/wgf2021/index.html" target="_blank">Workshop on geometry of foliations and its applications</a>, 10–12 December 2021
+      <a href="http://www.math.aoyama.ac.jp/~ymatsuda/wgf2021/index.html" target="_blank">Workshop on Geometry of Foliations and its Applications</a>, 10–12 December 2021
     </li>
     <li>
       Oka theory for algebraic manifolds. (online)<br>
@@ -197,7 +213,7 @@
     </li>
     <li>
       The Oka principle and the dual Levi problem. (online)<br>
-      <a href="https://tkoike.com/conf_2020/2021FebGrauert.html" target="_blank">Grauert theory and recent complex geometry</a>,
+      <a href="https://tkoike.com/conf_2020/2021FebGrauert.html" target="_blank">Grauert Theory and Recent Complex Geometry</a>,
       Osaka City University, 6–9 February 2021
     </li>
     <li>
@@ -238,7 +254,7 @@
     <li>
       Dense entire curves and Oka manifolds.<br>
       <a href="https://shotanimoto.wordpress.com/rims-symposia-rational-points-on-higher-dimensional-varieties/" target="_blank">Rational Points on Higher Dimensional Varieties</a>,
-      Kyoto University, 2–6 December 2019
+      RIMS, Kyoto University, 2–6 December 2019
     </li>
     <li>
       岡の原理と楕円性.<br>
@@ -298,7 +314,7 @@
     <li>
       Characterizations of Oka manifolds by entire curves.<br>
       <a href="https://wwp.shizuoka.ac.jp/masanori-adachi/2017rims/" target="_blank">Topology of pseudoconvex domains and analysis of reproducing kernels</a>,
-      Kyoto University, 20–22 November 2017
+      RIMS, Kyoto University, 20–22 November 2017
     </li>
     <li>
       Dense holomorphic curves and universal holomorphic maps.<br>
