--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </script>
   <hr>
   <a href="img/joku-iko.jpg"><img src="img/joku-iko_s.jpg" style="float:right;width:270px;margin:0px 0px 10px 10px"></a>
-  <h1>Yuta Kusakabe / 日下部佑太</h1>
+  <h1>Yuta KUSAKABE / <ruby>日下部 佑太<rt>Kusakabe Yuta</rt></ruby></h1>
   <p>Assistant Professor</p>
   <p>
     <a href="https://www.math.kyoto-u.ac.jp/en" target="_blank">Department of Mathematics,
@@ -51,12 +51,12 @@
   <p><a href="#CV">Curriculum Vitae</a></p>
   <p>
     E-mail: kusakabe[at]math.kyoto-u.ac.jp, kusaka<strong>p</strong>e[at]gmail.com</p>
-    Research interests: Several Complex Variables, Complex Analytic Geometry<br>
-    Keywords: Oka principle, Oka manifold, Stein space, ellipticity
+    Research interests: Several Complex Variables, Complex Geometry<br>
+    Keywords: Oka principle, Oka manifold, Stein space, Gromov ellipticity
   </p>
   <p>
-    Photo: Penguins' Jôku-Ikô <上空移行><br>
-    (<a href="http://www.nara-wu.ac.jp/aic/gdb/nwugdb/oka/fram/koron_eng.html" target="_blank">[Oka, 1936]</a>: Oka's Jôku-Ikô Principle)
+    Photo: Penguins' Jôku-Ikô / 上空移行<br>
+    (cf. <a href="http://www.nara-wu.ac.jp/aic/gdb/nwugdb/oka/fram/koron_eng.html" target="_blank">[Oka, 1936]</a>: Oka's Jôku-Ikô Principle)
   </p>
   <hr style="clear:right;">
   <h2>Papers</h2>
