--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </p>
   <p>
     Photo: Penguins' Jôku-Ikô / 上空移行<br>
-    (cf. <a href="http://www.nara-wu.ac.jp/aic/gdb/nwugdb/oka/fram/koron_eng.html" target="_blank">[Oka, 1936]</a>: Oka's Jôku-Ikô Principle)
+    (cf. Oka's Jôku-Ikô Principle <a href="http://www.nara-wu.ac.jp/aic/gdb/nwugdb/oka/fram/koron_eng.html" target="_blank">[Oka, 1936]</a>)
   </p>
   <hr style="clear:right;">
   <h2>Papers</h2>
