--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
     </li>
     <li>
       岡の原理と楕円性 (1 & 2).<br>
-      <a href="https://sites.google.com/view/contsingdiff2019" target="_blank">Contact structures, Singularities, Differential Equations and Related Topics</a>,
+      <a href="https://sites.google.com/view/contsingdiff2019" target="_blank">Contact Structures, Singularities, Differential Equations and Related Topics</a>,
       Shizuoka Prefecture Gender Equality Center "Azalea", Shizuoka, 28–31 January 2019
     </li>
     <li>
@@ -313,7 +313,7 @@
     </li>
     <li>
       Characterizations of Oka manifolds by entire curves.<br>
-      <a href="https://wwp.shizuoka.ac.jp/masanori-adachi/2017rims/" target="_blank">Topology of pseudoconvex domains and analysis of reproducing kernels</a>,
+      <a href="https://wwp.shizuoka.ac.jp/masanori-adachi/2017rims/" target="_blank">Topology of Pseudoconvex Domains and Analysis of Reproducing Kernels</a>,
       RIMS, Kyoto University, 20–22 November 2017
     </li>
     <li>
