--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       Kyoto University, 25 May 2021
     </li>
     <li>
-      岡多様体と楕円性. (online)<br>
+      岡多様体と楕円性. (invited by Complex Analysis Section, online)<br>
       <a href="https://www.mathsoc.jp/activity/meeting/keio21mar/" target="_blank">MSJ Spring Meeting 2021</a>,
       Keio University, 15–18 March 2021
     </li>
