--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
       <a href="https://tkoike.com/conf_2023/2024Jan.html" target="_blank">Workshop on Dynamics in Arithmetic and Complex Geometry and its Applications</a>, Osaka Metropolitan University, 16–19 January 2024
     </li>
     <li>
+      TBA.<br>
+      <a href="https://sites.google.com/view/jialongdeng/seminar/" target="_blank">Online Differential Geometry Seminar</a>, Yau Mathematical Sciences Center, Tsinghua University, 19 December 2023
+    </li>
+    <li>
       Oka tubes in holomorphic line bundles.<br>
       <a href="https://sites.google.com/view/2023scvwinter/" target="_blank">Winter Seminar on Several Complex Variables 2023</a>, University of Tsukuba, 15–17 December 2023
     </li>
