--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       <a href="https://tkoike.com/conf_2023/2024Jan.html" target="_blank">Workshop on Dynamics in Arithmetic and Complex Geometry and its Applications</a>, Osaka Metropolitan University, 16–19 January 2024
     </li>
     <li>
-      TBA. (online)<br>
+      Oka tubes in holomorphic line bundles. (online)<br>
       <a href="https://sites.google.com/view/jialongdeng/seminar/" target="_blank">Online Differential Geometry Seminar</a>, Yau Mathematical Sciences Center, Tsinghua University, 19 December 2023
     </li>
     <li>
