--- a/index.html
+++ b/index.html
@@ -57,16 +57,15 @@
   <hr>
   <a href="img/joku-iko.jpg"><img src="img/joku-iko_s.jpg" style="float:right;width:270px;margin:0px 0px 10px 10px"></a>
   <h1>Yuta KUSAKABE / <ruby>日下部 佑太<rt>Kusakabe Yuta</rt></ruby></h1>
-  <p>Assistant Professor</p>
+  <p>Associate Professor</p>
   <p>
-    <a href="https://www.math.kyoto-u.ac.jp/en" target="_blank">Department of Mathematics,
-    Graduate School of Science,
-    Kyoto University</a>,
-    Kyoto 606-8502, Japan
+    <a href="https://www.math.kyushu-u.ac.jp/" target="_blank">Faculty of Mathematics,
+    Kyushu University</a><br>
+    744 Moto<strong>oka</strong>, Nishi-ku, Fuku<strong>oka</strong> 819-0395, Japan
   </p>
   <p><a href="#CV">Curriculum Vitae</a></p>
   <p>
-    E-mail: kusakabe[at]math.kyoto-u.ac.jp, kusaka<strong>p</strong>e[at]gmail.com</p>
+    E-mail: kusakabe[at]math.kyushu-u.ac.jp, kusaka<strong>p</strong>e[at]gmail.com</p>
     Research interests: Several Complex Variables, Complex Geometry<br>
     Keywords: Oka principle, Oka manifold, Stein space, Gromov ellipticity
   </p>
@@ -149,7 +148,11 @@
   <h2>Talks</h2>
   <ol reversed class="bracket">
     <li>
-      TBA.<br>
+      岡領域と双対Levi問題.<br>
+      <a href="https://sites.google.com/view/fcas11/" target="_blank">The 11th Fukuoka Complex Analysis Symposium</a>, Kyushu University, 16 March 2024
+    </li>
+    <li>
+      Dynamical methods in Gromov's elliptic geometry.<br>
       <a href="https://tkoike.com/conf_2023/2024Jan.html" target="_blank">Workshop on Dynamics in Arithmetic and Complex Geometry and its Applications</a>, Osaka Metropolitan University, 16–19 January 2024
     </li>
     <li>
@@ -374,7 +377,8 @@
   <hr>
   <a name="CV"><h2>Curriculum Vitae</h2></a>
   Yuta Kusakabe<br>
-  Born on May 22, 1993 in Aichi, Japan.
+  Born on May 22, 1993 in Aichi, Japan.<br>
+  Married, one son.
   <h3>Education</h3>
   <dl>
     <dt>September 2020</dt>
@@ -392,7 +396,10 @@
   </dl>
   <h3>Employment / Fellowships</h3>
   <dl>
-    <dt>December 2020–</dt>
+    <dt>April 2024–</dt>
+      <dd>Associate Professor</dd>
+      <dd>Faculty of Mathematics, Kyushu University</dd>
+    <dt>December 2020–March 2024</dt>
       <dd>Assistant Professor</dd>
       <dd>Department of Mathematics, Graduate School of Science, Kyoto University</dd>
     <dt>October 2020–November 2020</dt>
@@ -412,7 +419,10 @@
   </dl>
   <h3>Grants</h3>
   <dl>
-    <dt>August 2021–March 2024</dt>
+    <dt>April 2024–March 2027</dt>
+      <dd>Grant-in-Aid for Early-Career Scientists</dd>
+      <dd>Japan Society for the Promotion of Science</dd>
+    <dt>August 2021–March 2025</dt>
       <dd>Grant-in-Aid for Research Activity Start-up (Grant Number: <a href="https://kaken.nii.ac.jp/en/grant/KAKENHI-PROJECT-21K20324/" target="_blank">21K20324</a>)</dd>
       <dd>Japan Society for the Promotion of Science</dd>
     <dt>April 2018–March 2021</dt>
@@ -427,7 +437,7 @@
   </dl>
   <h3>Organization</h3>
   <dl>
-    <dt>October 2021–</dt>
+    <dt>October 2021–March 2024</dt>
     <dd><a href="https://www.math.kyoto-u.ac.jp/ja/event/seminar/algebraic-geometry" target="_blank">Algebraic Geometry Seminar</a></dd>
     <dd>Kyoto University</dd>
   </dl>
