九大異動後の色々更新

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </li>
     <li>
       Oka properties of complements of holomorphically convex sets.<br>
-      <a href="https://annals.math.princeton.edu/articles/21160" target="_blank">Ann. of Math. (2), to appear</a><br>
+      <a href="https://doi.org/10.4007/annals.2024.199.2.7" target="_blank">Ann. of Math. (2), 199(2): 899–917, 2024</a><br>
       <a href="http://arxiv.org/abs/2005.08247" target="_blank">arXiv:2005.08247</a>
     </li>
     <li>
@@ -125,8 +125,12 @@
     </li>
   </ol>
   <hr>
-  <h2>Notes</h2>
+  <h2>Miscellaneous</h2>
   <ol reversed class="bracket">
+    <li>
+      Gromovの楕円幾何学から岡の原理へ</a>. (Japanese)<br>
+      <a href="https://www.gensu.jp/product-category/monthly_magazine/modern_mathematics/" target="_blank">現代数学</a> (連載, 2024年4月号–), 現代数学社, 2024–
+    </li>
     <li>
       <a href="pdf/MSJ2021_ellipticity.pdf" target="_blank">岡多様体と楕円性</a>. (Japanese)<br>
       日本数学会2021年度年会講演アブストラクト, 2021
@@ -148,6 +152,23 @@
   <h2>Talks</h2>
   <ol reversed class="bracket">
     <li>
+      複素解析学における剛性と柔軟性. (online)<br>
+      <a href="https://www.ms.u-tokyo.ac.jp/~yasuyuki/riken2024.htm" target="_blank">Academic Frontier Lecture Series</a>, 3 & 10 July 2024
+    </li>
+    <li>
+      TBA<br>
+      <a href="https://www.ms.u-tokyo.ac.jp/seminar/geocomp/" target="_blank">Seminar on Geometric Complex Analysis</a>,
+      The University of Tokyo, 17 June 2024
+    </li>
+    <li>
+      Toward Gromov's Oka principle with growth conditions.<br>
+      <a href="https://sites.google.com/view/scvfukuoka/" target="_blank">Fukuoka Complex Analysis Seminar</a>, Kyushu University, 21 May 2024
+    </li>
+    <li>
+      Levi問題から岡の原理へ、そして新たなLevi問題へ.<br>
+      <a href="https://www.math.kyushu-u.ac.jp/activities/11628/" target="_blank">Colloquium</a>, Kyushu University, 16 May 2024
+    </li>
+    <li>
       岡領域と双対Levi問題.<br>
       <a href="https://sites.google.com/view/fcas11/" target="_blank">The 11th Fukuoka Complex Analysis Symposium</a>, Kyushu University, 16 March 2024
     </li>
@@ -157,7 +178,7 @@
     </li>
     <li>
       Oka tubes in holomorphic line bundles. (online)<br>
-      <a href="https://sites.google.com/view/jialongdeng/seminar/" target="_blank">Online Differential Geometry Seminar</a>, Yau Mathematical Sciences Center, Tsinghua University, 19 December 2023
+      <a href="https://sites.google.com/view/jialongdeng/seminar-2023/" target="_blank">Online Differential Geometry Seminar</a>, Yau Mathematical Sciences Center, Tsinghua University, 19 December 2023
     </li>
     <li>
       Oka tubes in holomorphic line bundles.<br>
@@ -420,13 +441,13 @@
   <h3>Grants</h3>
   <dl>
     <dt>April 2024–March 2027</dt>
-      <dd>Grant-in-Aid for Early-Career Scientists</dd>
+      <dd>Grant-in-Aid for Early-Career Scientists (Grant Number: <a href="https://kaken.nii.ac.jp/grant/KAKENHI-PROJECT-24K16919" target="_blank">24K16919</a>)</dd>
       <dd>Japan Society for the Promotion of Science</dd>
     <dt>August 2021–March 2025</dt>
-      <dd>Grant-in-Aid for Research Activity Start-up (Grant Number: <a href="https://kaken.nii.ac.jp/en/grant/KAKENHI-PROJECT-21K20324/" target="_blank">21K20324</a>)</dd>
+      <dd>Grant-in-Aid for Research Activity Start-up (Grant Number: <a href="https://kaken.nii.ac.jp/grant/KAKENHI-PROJECT-21K20324/" target="_blank">21K20324</a>)</dd>
       <dd>Japan Society for the Promotion of Science</dd>
     <dt>April 2018–March 2021</dt>
-      <dd>Grant-in-Aid for JSPS Fellows (Grant Number: <a href="https://kaken.nii.ac.jp/en/grant/KAKENHI-PROJECT-18J20418/" target="_blank">18J20418</a>)</dd>
+      <dd>Grant-in-Aid for JSPS Fellows (Grant Number: <a href="https://kaken.nii.ac.jp/grant/KAKENHI-PROJECT-18J20418/" target="_blank">18J20418</a>)</dd>
       <dd>Japan Society for the Promotion of Science</dd>
   </dl>
   <h3>Awards</h3>
@@ -437,11 +458,29 @@
   </dl>
   <h3>Organization</h3>
   <dl>
+    <dt>August 2024</dt>
+    <dd><a href="https://www2.math.kyushu-u.ac.jp/~kusakabe/YMWSCV2024/" target="_blank">Young Mathematicians Workshop on Several Complex Variables 2024</a></dd>
+    <dd>Osaka Metropolitan University</dd>
+    <dt>April 2024–</dt>
+    <dd><a href="https://sites.google.com/view/scvfukuoka/" target="_blank">Fukuoka Complex Analysis Seminar</a></dd>
+    <dd>Kyushu University & Fukuoka Institute of Technology</dd>
     <dt>October 2021–March 2024</dt>
     <dd><a href="https://www.math.kyoto-u.ac.jp/ja/event/seminar/algebraic-geometry" target="_blank">Algebraic Geometry Seminar</a></dd>
     <dd>Kyoto University</dd>
   </dl>
   <h3>Teaching</h3>
+  Lectures at Kyushu University:
+  <dl>
+    <dt>October 2024–March 2025</dt>
+      <dd>Survey in Mathematics IV, Exercise</dd>
+      <dd>Department of Mathematics</dd>
+    <dt>April 2024–September 2024</dt>
+      <dd>Survey in Mathematics II, Exercise</dd>
+      <dd>Department of Mathematics</dd>
+    <dt>April 2024–September 2024</dt>
+      <dd>Mathematics Perspective I</dd>
+      <dd>Department of Mathematics</dd>
+  </dl>
   Lectures at Kyoto University:
   <dl>
     <dt>April 2023–September 2023</dt>
